# azure-function-cpp-test

./: .gitignore  CMakeLists.txt  README.md  host.json  local.settings.json
.devcontainer/: Dockerfile  devcontainer.json
queue-trigger/: function.json
src/: host_types.hpp  main.cpp
